<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:padding="10dp"
            android:text="@string/cityTunja"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/image1"
            app:layout_constraintTop_toBottomOf="@id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img"

            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="110dp" />

        <TextView
            android:id="@+id/infoGeneralV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:text="@string/infoGeneral"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/image1" />

        <TextView
            android:id="@+id/paragraph1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/tunja"
            app:layout_constraintTop_toBottomOf="@id/infoGeneralV" />

        <TextView
            android:id="@+id/infoLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:text="@string/location"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/paragraph1" />

        <TextView
            android:id="@+id/paragraph2"
            app:layout_constraintTop_toBottomOf="@id/infoLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/locationTunja"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="385dp" />

        <TextView
            android:id="@+id/infoTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:text="@string/temperature"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/paragraph2" />

        <TextView
            android:id="@+id/paragraph3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/tempTunja"
            app:layout_constraintTop_toBottomOf="@id/infoTemperature" />

        <TextView
            android:id="@+id/infoSites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:text="@string/sites"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/paragraph3" />

        <TextView
            android:id="@+id/paragraph4"
            app:layout_constraintTop_toBottomOf="@id/infoSites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/sitesTunja"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="162dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>